Trained EffectiveNet Until Crashed

--- a/Magno_parvo_algorithms.ipynb
+++ b/Magno_parvo_algorithms.ipynb
@@ -275,7 +275,7 @@
         "id": "i9xe3HaOoISJ"
       },
       "id": "i9xe3HaOoISJ",
-      "execution_count": 109,
+      "execution_count": 117,
       "outputs": []
     },
     {
@@ -285,39 +285,24 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 165
         },
         "id": "bd3TM4OZquYo",
-        "outputId": "d06199be-9ceb-4d73-f9b9-2f7c20945fcc"
+        "outputId": "2e19f24c-f886-4dc8-abb9-8979e5d413c8"
       },
       "id": "bd3TM4OZquYo",
-      "execution_count": 100,
+      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Model: \"dual_stream_cnn_25\"\n",
-            "_________________________________________________________________\n",
-            " Layer (type)                Output Shape              Param #   \n",
-            "=================================================================\n",
-            " efficientnetb0 (Functional)  (None, None, None, 1280)  4049571  \n",
-            "                                                                 \n",
-            " efficientnetb0 (Functional)  (None, None, None, 1280)  4049571  \n",
-            "                                                                 \n",
-            " flatten_21 (Flatten)        multiple                  0         \n",
-            "                                                                 \n",
-            " dense_99 (Dense)            multiple                  0 (unused)\n",
-            "                                                                 \n",
-            " average_24 (Average)        multiple                  0         \n",
-            "                                                                 \n",
-            " dense_100 (Dense)           multiple                  3136050   \n",
-            "                                                                 \n",
-            "=================================================================\n",
-            "Total params: 11,235,192\n",
-            "Trainable params: 11,151,146\n",
-            "Non-trainable params: 84,046\n",
-            "_________________________________________________________________\n"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-2077d887d362>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdual_stream_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msummary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'dual_stream_model' is not defined"
           ]
         }
       ]
@@ -332,7 +317,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "04c41760",
-        "outputId": "6808e957-037f-4455-81bf-d98e16677734"
+        "outputId": "ed497766-9de9-4c4b-9e20-cbb22cca2268"
       },
       "outputs": [
         {
@@ -340,13 +325,25 @@
           "name": "stdout",
           "text": [
             "Epoch 1/100\n",
-            "104/610 [====>.........................] - ETA: 10:22 - loss: 2.1153 - accuracy: 0.5180"
+            "338/610 [===============>..............] - ETA: 11:10 - loss: 1.6039 - accuracy: 0.6111"
           ]
         }
       ],
       "source": [
         "train_history = dual_stream_model.fit(train_ds_preprocessed, validation_data = val_ds_preprocessed, epochs= 100)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_history"
+      ],
+      "metadata": {
+        "id": "FjL1aLs30KA0"
+      },
+      "id": "FjL1aLs30KA0",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
