Dual-stream with ResNet

--- a/Magno_parvo_algorithms.ipynb
+++ b/Magno_parvo_algorithms.ipynb
@@ -10,7 +10,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "273e5c47",
-        "outputId": "fa54cfda-1394-4ddb-bd6b-1a9889b86b0f"
+        "outputId": "d6f933b8-7fad-441a-f385-73cfaa70284c"
       },
       "outputs": [
         {
@@ -46,10 +46,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FTxP_p0fZrGX",
-        "outputId": "d1ab5165-aa23-4b57-eff4-9e900d6a83bd"
+        "outputId": "69653c21-fbc7-4a11-b6fd-4eee58181039"
       },
       "id": "FTxP_p0fZrGX",
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -62,14 +62,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "id": "61f265cf",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "61f265cf",
-        "outputId": "d3abcff5-1a4d-4b9a-8382-5b819278e916"
+        "outputId": "62512379-8e0f-4155-8eb3-bfaf489ba6a3"
       },
       "outputs": [
         {
@@ -112,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "id": "498b8dd1",
       "metadata": {
         "id": "498b8dd1"
@@ -187,7 +187,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 5,
       "id": "b019d239",
       "metadata": {
         "id": "b019d239"
@@ -202,7 +202,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 6,
       "id": "a3258579",
       "metadata": {
         "id": "a3258579"
@@ -211,7 +211,7 @@
       "source": [
         "import tensorflow as tf\n",
         "\n",
-        "class DualStream_CNN(tf.keras.Model):\n",
+        "class DualStream_ENet(tf.keras.Model):\n",
         "    def __init__(self, n_outputs, batch_size, freeze = True):\n",
         "        super().__init__()\n",
         "        self.n_outputs =  n_outputs\n",
@@ -268,15 +268,15 @@
       "cell_type": "code",
       "source": [
         "FREEZE = False #One of None or imagenet\n",
-        "dual_stream_model = DualStream_CNN(50,batch_size,FREEZE)\n",
+        "dual_stream_model = DualStream_ENet(50,batch_size,FREEZE)\n",
         "dual_stream_model.compile(loss = 'categorical_crossentropy', optimizer = 'adam', metrics = ['accuracy'])"
       ],
       "metadata": {
         "id": "i9xe3HaOoISJ",
-        "outputId": "ddda9c4d-2a21-44bd-ed0e-b345f346bd39",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ddda9c4d-2a21-44bd-ed0e-b345f346bd39"
       },
       "id": "i9xe3HaOoISJ",
       "execution_count": 9,
@@ -314,50 +314,120 @@
       },
       "outputs": [],
       "source": [
-        "train_history = dual_stream_model.fit(train_ds_preprocessed, validation_data = val_ds_preprocessed, epochs= 100)"
+        "train_history = dual_stream_model.fit(train_ds_preprocessed, validation_data = val_ds_preprocessed, epochs= 100)\n",
+        "dual_stream_model.save(\"/content/drive/MyDrive/School/MIT Spring2022/9.60/Vision Project/Models/Dualstream_with_EfficientNet\")"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "dual_stream_model.save(\"/content/drive/MyDrive/School/MIT Spring2022/9.60/Vision Project/Models/Dualstream_with_EfficientNet\")"
+        "class DualStream_ResNet(tf.keras.Model):\n",
+        "    def __init__(self, n_outputs, batch_size, freeze = True):\n",
+        "        super().__init__()\n",
+        "        self.n_outputs =  n_outputs\n",
+        "\n",
+        "        self.magno_stream = tf.keras.applications.ResNet50(\n",
+        "                            include_top=False,\n",
+        "                            weights=\"imagenet\",\n",
+        "                            input_tensor=None,\n",
+        "                            input_shape=None,\n",
+        "                            pooling=None,\n",
+        "                            classes=n_outputs,\n",
+        "                            )\n",
+        "        \n",
+        "        self.parvo_stream = tf.keras.applications.ResNet50(\n",
+        "                            include_top=False,\n",
+        "                            weights=\"imagenet\",\n",
+        "                            input_tensor=None,\n",
+        "                            input_shape=None,\n",
+        "                            pooling=None,\n",
+        "                            classes=n_outputs,\n",
+        "                            )\n",
+        "        if freeze:\n",
+        "          self.magno_stream.trainable = False\n",
+        "          self.parvo_stream.trainable = False\n",
+        "\n",
+        "        self.flat = tf.keras.layers.Flatten()\n",
+        "        self.fc = Sequential([tf.keras.layers.Dense(1280, activation='ReLU'),\n",
+        "                              tf.keras.layers.Dense(640, activation='ReLU'),\n",
+        "                              tf.keras.layers.Dense(self.n_outputs, activation='softmax')])\n",
+        "        \n",
+        "        self.avg = tf.keras.layers.Average()\n",
+        "        self.fc_out = tf.keras.layers.Dense(self.n_outputs, activation='softmax')\n",
+        "\n",
+        "    def call(self,inputs):\n",
+        "        color_input = inputs[:,:,:,:-1]\n",
+        "        gray_input = inputs[:,:,:,-1:]\n",
+        "        concat_gray_input = tf.concat([gray_input,\n",
+        "                                      gray_input,\n",
+        "                                      gray_input],axis=-1)\n",
+        "\n",
+        "        m_stream = self.magno_stream(color_input)\n",
+        "        m_stream = self.flat(m_stream)\n",
+        "        \n",
+        "        p_stream = self.parvo_stream(concat_gray_input)\n",
+        "        p_stream = self.flat(p_stream)\n",
+        "        \n",
+        "        avg_outputs = self.avg([p_stream,m_stream])\n",
+        "        return self.fc(avg_outputs)"
       ],
       "metadata": {
-        "id": "FjL1aLs30KA0",
-        "outputId": "fff0102c-91c5-41e2-8a95-663ee72dd9cf",
+        "id": "PVDAyYHHiwX8"
+      },
+      "id": "PVDAyYHHiwX8",
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "FREEZE = False #One of None or imagenet\n",
+        "dual_stream_model = DualStream_ResNet(50,batch_size,FREEZE)\n",
+        "dual_stream_model.compile(loss = 'categorical_crossentropy', optimizer = 'adam', metrics = ['accuracy'])"
+      ],
+      "metadata": {
+        "id": "nrmij0NKjg0Z",
+        "outputId": "e20b5767-8507-4c7f-d157-ad846b955666",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "id": "FjL1aLs30KA0",
-      "execution_count": 12,
+      "id": "nrmij0NKjg0Z",
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "WARNING:tensorflow:Skipping full serialization of Keras layer <keras.layers.core.dense.Dense object at 0x7f3c118f9710>, because it is not built.\n"
+            "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/resnet/resnet50_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
+            "94773248/94765736 [==============================] - 2s 0us/step\n",
+            "94781440/94765736 [==============================] - 2s 0us/step\n"
           ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "WARNING:absl:Found untraced functions such as re_lu_layer_call_fn, re_lu_layer_call_and_return_conditional_losses, re_lu_1_layer_call_fn, re_lu_1_layer_call_and_return_conditional_losses while saving (showing 4 of 4). These functions will not be directly callable after loading.\n"
-          ]
-        },
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_history = dual_stream_model.fit(train_ds_preprocessed, validation_data = val_ds_preprocessed, epochs= 40)\n",
+        "dual_stream_model.save(\"/content/drive/MyDrive/School/MIT Spring2022/9.60/Vision Project/Models/Dualstream_with_EfficientNet\")"
+      ],
+      "metadata": {
+        "id": "RAojac_FjiHf",
+        "outputId": "c3f6d044-583c-467a-f2ff-1bbda26f3f47",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "RAojac_FjiHf",
+      "execution_count": null,
+      "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "INFO:tensorflow:Assets written to: /content/drive/MyDrive/School/MIT Spring2022/9.60/Vision Project/Models/Dualstream_with_EfficientNet/assets\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "INFO:tensorflow:Assets written to: /content/drive/MyDrive/School/MIT Spring2022/9.60/Vision Project/Models/Dualstream_with_EfficientNet/assets\n"
+            "Epoch 1/40\n",
+            "117/610 [====>.........................] - ETA: 28:12 - loss: 5.6530 - accuracy: 0.0411"
           ]
         }
       ]
