Re-trained ResNet dual stream and single ResNet

--- a/Magno_parvo_algorithms.ipynb
+++ b/Magno_parvo_algorithms.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "id": "273e5c47",
       "metadata": {
         "scrolled": false,
@@ -10,7 +10,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "273e5c47",
-        "outputId": "d3f4dbd7-14bc-4177-cbc3-91e12c3bb0e5"
+        "outputId": "aecacbc9-eba1-477a-fca3-0209949a99e5"
       },
       "outputs": [
         {
@@ -47,10 +47,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FTxP_p0fZrGX",
-        "outputId": "c3d0412c-e78e-41ea-f79d-0ff72edeccee"
+        "outputId": "1700d1b7-eedf-4358-b4b8-f4b95ded6b42"
       },
       "id": "FTxP_p0fZrGX",
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -63,14 +63,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "id": "61f265cf",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "61f265cf",
-        "outputId": "688ad6db-752e-4e06-d711-51c3a63e8402"
+        "outputId": "3fdf6e20-797b-4c71-d21f-d7a37f6c6613"
       },
       "outputs": [
         {
@@ -115,7 +115,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "id": "498b8dd1",
       "metadata": {
         "id": "498b8dd1"
@@ -164,7 +164,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "0265e93d",
       "metadata": {
         "colab": {
@@ -244,8 +244,8 @@
         "          self.parvo_stream.trainable = False\n",
         "\n",
         "        self.flat = tf.keras.layers.Flatten()\n",
-        "        self.fc = Sequential([#tf.keras.layers.Dense(2048,activation='ReLU'),\n",
-        "                              #tf.keras.layers.Dropout(0.5),\n",
+        "        self.fc = Sequential([tf.keras.layers.Dense(2048,activation='ReLU'),\n",
+        "                              tf.keras.layers.Dropout(0.5),\n",
         "                              tf.keras.layers.Dense(1280, activation='ReLU'),\n",
         "                              tf.keras.layers.Dropout(0.5),\n",
         "                              tf.keras.layers.Dense(640, activation='ReLU'),\n",
@@ -280,7 +280,7 @@
         "id": "PVDAyYHHiwX8"
       },
       "id": "PVDAyYHHiwX8",
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -296,7 +296,7 @@
         "id": "nrmij0NKjg0Z"
       },
       "id": "nrmij0NKjg0Z",
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -320,7 +320,7 @@
         "outputId": "44686e19-acf0-4f9a-da33-1f891e8f2eb2"
       },
       "id": "RAojac_FjiHf",
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -485,7 +485,7 @@
         "id": "6Q0i4qDtJ1mx"
       },
       "id": "6Q0i4qDtJ1mx",
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -511,7 +511,7 @@
         }
       },
       "id": "n82_rX4HgSEg",
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -619,7 +619,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 8,
       "id": "a3258579",
       "metadata": {
         "id": "a3258579"
@@ -629,7 +629,8 @@
         "import tensorflow as tf\n",
         "                                                                                \n",
         "class DualStream_ENet(tf.keras.Model):\n",
-        "    def __init__(self, n_outputs, batch_size, freeze = True, load_type=None):\n",
+        "    def __init__(self, n_outputs, batch_size, freeze = True, load_type=None,\n",
+        "                 merge_type=\"averaging\"):\n",
         "        super().__init__()\n",
         "        self.n_outputs =  n_outputs\n",
         "        self.merge_type = merge_type\n",
@@ -658,8 +659,8 @@
         "          self.parvo_stream.trainable = False\n",
         "\n",
         "        self.flat = tf.keras.layers.Flatten()\n",
-        "        self.fc = Sequential([#tf.keras.layers.Dense(2048,activation='ReLU'),\n",
-        "                              #tf.keras.layers.Dropout(0.5),\n",
+        "        self.fc = Sequential([tf.keras.layers.Dense(2048,activation='ReLU'),\n",
+        "                              tf.keras.layers.Dropout(0.5),\n",
         "                              tf.keras.layers.Dense(1280, activation='ReLU'),\n",
         "                              tf.keras.layers.Dropout(0.5),\n",
         "                              tf.keras.layers.Dense(640, activation='ReLU'),\n",
@@ -699,35 +700,86 @@
       "source": [
         "FREEZE = False #One of None or imagenet\n",
         "dual_stream_model = DualStream_ENet(50,batch_size,FREEZE,load_type=\"imagenet\",\n",
-        "                                    merge_type=\"concat\")\n",
+        "                                    merge_type=\"averaging\")\n",
         "dual_stream_model.compile(loss = 'categorical_crossentropy', optimizer = 'adam', metrics = ['accuracy'])"
       ],
       "metadata": {
         "id": "i9xe3HaOoISJ"
       },
       "id": "i9xe3HaOoISJ",
-      "execution_count": 21,
+      "execution_count": 15,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# checkpoint_path = \"/content/drive/MyDrive/School/MIT Spring2022/9.60/Vision Project/Models//content/drive/MyDrive/School/MIT Spring2022/9.60/Vision Project/Models/Dualstream_with_ResNet2.0\"\n",
-        "callback = tf.keras.callbacks.EarlyStopping(monitor='val_accuracy', patience=10, restore_best_weights=True)\n",
+        "callback = tf.keras.callbacks.EarlyStopping(monitor='val_accuracy', patience=20, restore_best_weights=True)\n",
         "# cp_callback = tf.keras.callbacks.ModelCheckpoint(filepath=checkpoint_path,\n",
         "#                                                  save_weights_only=True,\n",
         "#                                                  verbose=1)\n",
         "\n",
         "train_history = dual_stream_model.fit(train_ds_preprocessed, validation_data= val_ds_preprocessed,\n",
         "                                      epochs= 30, callbacks=callback, workers = 4)\n",
-        "dual_stream_model.save(\"Models/Dualstream_with_EfficientNet2.0\")"
+        "dual_stream_model.save(\"/content/drive/MyDrive/School/MIT Spring2022/9.60/Vision Project/Models/Dualstream_with_EfficientNet_Deeper\")"
       ],
       "metadata": {
-        "id": "bd3TM4OZquYo"
+        "id": "bd3TM4OZquYo",
+        "outputId": "6b7bba78-84c2-45fa-937c-0b1cce175de1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "id": "bd3TM4OZquYo",
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/30\n",
+            "489/489 [==============================] - 348s 671ms/step - loss: 2.9101 - accuracy: 0.3179 - val_loss: 5.7237 - val_accuracy: 0.0133\n",
+            "Epoch 2/30\n",
+            "489/489 [==============================] - 325s 663ms/step - loss: 2.3374 - accuracy: 0.4244 - val_loss: 19.3927 - val_accuracy: 0.0190\n",
+            "Epoch 3/30\n",
+            "489/489 [==============================] - 325s 663ms/step - loss: 2.2102 - accuracy: 0.4646 - val_loss: 44.7883 - val_accuracy: 0.0207\n",
+            "Epoch 4/30\n",
+            "489/489 [==============================] - 325s 664ms/step - loss: 2.2732 - accuracy: 0.4535 - val_loss: 13.0702 - val_accuracy: 0.0228\n",
+            "Epoch 5/30\n",
+            "489/489 [==============================] - 324s 662ms/step - loss: 2.1662 - accuracy: 0.4679 - val_loss: 4.0507 - val_accuracy: 0.0251\n",
+            "Epoch 6/30\n",
+            "489/489 [==============================] - 324s 661ms/step - loss: 2.1699 - accuracy: 0.4697 - val_loss: 136.9688 - val_accuracy: 0.0182\n",
+            "Epoch 7/30\n",
+            "489/489 [==============================] - 324s 662ms/step - loss: 2.3259 - accuracy: 0.4434 - val_loss: 5.0203 - val_accuracy: 0.0269\n",
+            "Epoch 8/30\n",
+            "489/489 [==============================] - 324s 662ms/step - loss: 2.1509 - accuracy: 0.4663 - val_loss: 4.4336 - val_accuracy: 0.0297\n",
+            "Epoch 9/30\n",
+            "489/489 [==============================] - 324s 661ms/step - loss: 2.1614 - accuracy: 0.4771 - val_loss: 211.7433 - val_accuracy: 0.0202\n",
+            "Epoch 10/30\n",
+            "489/489 [==============================] - 324s 661ms/step - loss: 2.0761 - accuracy: 0.4886 - val_loss: 6.5694 - val_accuracy: 0.0256\n",
+            "Epoch 11/30\n",
+            "489/489 [==============================] - 323s 659ms/step - loss: 2.2387 - accuracy: 0.4535 - val_loss: 5.1734 - val_accuracy: 0.0190\n",
+            "Epoch 12/30\n",
+            "489/489 [==============================] - 324s 661ms/step - loss: 2.2110 - accuracy: 0.4583 - val_loss: 3.9455 - val_accuracy: 0.0294\n",
+            "Epoch 13/30\n",
+            "489/489 [==============================] - 323s 661ms/step - loss: 2.1322 - accuracy: 0.4773 - val_loss: 6.6927 - val_accuracy: 0.0143\n",
+            "Epoch 14/30\n",
+            "489/489 [==============================] - 323s 661ms/step - loss: 2.1872 - accuracy: 0.4592 - val_loss: 5.9065 - val_accuracy: 0.0187\n",
+            "Epoch 15/30\n",
+            "489/489 [==============================] - 324s 661ms/step - loss: 2.2838 - accuracy: 0.4471 - val_loss: 4.5453 - val_accuracy: 0.0136\n",
+            "Epoch 16/30\n",
+            "489/489 [==============================] - 325s 665ms/step - loss: 2.2285 - accuracy: 0.4513 - val_loss: 4.0267 - val_accuracy: 0.0676\n",
+            "Epoch 17/30\n",
+            "489/489 [==============================] - 322s 658ms/step - loss: 2.2852 - accuracy: 0.4375 - val_loss: 22.4893 - val_accuracy: 0.0179\n",
+            "Epoch 18/30\n",
+            "489/489 [==============================] - 323s 661ms/step - loss: 2.4089 - accuracy: 0.4031 - val_loss: 6.4417 - val_accuracy: 0.0197\n",
+            "Epoch 19/30\n",
+            "489/489 [==============================] - 323s 660ms/step - loss: 2.3084 - accuracy: 0.4389 - val_loss: 1444.3357 - val_accuracy: 0.0179\n",
+            "Epoch 20/30\n",
+            "324/489 [==================>...........] - ETA: 1:44 - loss: 2.4381 - accuracy: 0.4117"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
