Changes to training to allow for saving in checkpoints every epoch based on highest validation accuracy

--- a/Magno_parvo_algorithms.ipynb
+++ b/Magno_parvo_algorithms.ipynb
@@ -17,7 +17,7 @@
       ],
       "metadata": {
         "id": "B8jN2PimUzk6",
-        "outputId": "0a9ed29f-b689-48fd-bcfb-7cd4d11b1226",
+        "outputId": "47647695-5609-4b37-8808-ce3218e4ae15",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -31,7 +31,7 @@
           "text": [
             "Collecting tensorflow_addons\n",
             "  Downloading tensorflow_addons-0.16.1-cp37-cp37m-manylinux_2_12_x86_64.manylinux2010_x86_64.whl (1.1 MB)\n",
-            "\u001b[?25l\r\u001b[K     |▎                               | 10 kB 31.7 MB/s eta 0:00:01\r\u001b[K     |▋                               | 20 kB 27.5 MB/s eta 0:00:01\r\u001b[K     |▉                               | 30 kB 12.0 MB/s eta 0:00:01\r\u001b[K     |█▏                              | 40 kB 9.4 MB/s eta 0:00:01\r\u001b[K     |█▌                              | 51 kB 6.9 MB/s eta 0:00:01\r\u001b[K     |█▊                              | 61 kB 8.1 MB/s eta 0:00:01\r\u001b[K     |██                              | 71 kB 7.6 MB/s eta 0:00:01\r\u001b[K     |██▍                             | 81 kB 7.3 MB/s eta 0:00:01\r\u001b[K     |██▋                             | 92 kB 8.0 MB/s eta 0:00:01\r\u001b[K     |███                             | 102 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |███▏                            | 112 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |███▌                            | 122 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |███▉                            | 133 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |████                            | 143 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |████▍                           | 153 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |████▊                           | 163 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |█████                           | 174 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |█████▎                          | 184 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |█████▌                          | 194 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |█████▉                          | 204 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |██████▏                         | 215 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |██████▍                         | 225 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |██████▊                         | 235 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |███████                         | 245 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |███████▎                        | 256 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |███████▋                        | 266 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |███████▉                        | 276 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |████████▏                       | 286 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |████████▌                       | 296 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |████████▊                       | 307 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |█████████                       | 317 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |█████████▍                      | 327 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |█████████▋                      | 337 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |██████████                      | 348 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |██████████▏                     | 358 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |██████████▌                     | 368 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |██████████▉                     | 378 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |███████████                     | 389 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |███████████▍                    | 399 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |███████████▊                    | 409 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |████████████                    | 419 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |████████████▎                   | 430 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |████████████▌                   | 440 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |████████████▉                   | 450 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |█████████████▏                  | 460 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |█████████████▍                  | 471 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |█████████████▊                  | 481 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |██████████████                  | 491 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |██████████████▎                 | 501 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |██████████████▋                 | 512 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |██████████████▉                 | 522 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |███████████████▏                | 532 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |███████████████▌                | 542 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |███████████████▊                | 552 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |████████████████                | 563 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |████████████████▍               | 573 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |████████████████▋               | 583 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |█████████████████               | 593 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |█████████████████▏              | 604 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |█████████████████▌              | 614 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |█████████████████▉              | 624 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |██████████████████              | 634 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |██████████████████▍             | 645 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |██████████████████▊             | 655 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |███████████████████             | 665 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |███████████████████▎            | 675 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |███████████████████▌            | 686 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |███████████████████▉            | 696 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |████████████████████▏           | 706 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |████████████████████▍           | 716 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |████████████████████▊           | 727 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |█████████████████████           | 737 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |█████████████████████▎          | 747 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |█████████████████████▋          | 757 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |█████████████████████▉          | 768 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |██████████████████████▏         | 778 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |██████████████████████▌         | 788 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |██████████████████████▊         | 798 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |███████████████████████         | 808 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |███████████████████████▍        | 819 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |███████████████████████▋        | 829 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |████████████████████████        | 839 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |████████████████████████▏       | 849 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |████████████████████████▌       | 860 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |████████████████████████▉       | 870 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |█████████████████████████       | 880 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▍      | 890 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▊      | 901 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |██████████████████████████      | 911 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▎     | 921 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▌     | 931 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▉     | 942 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▏    | 952 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▍    | 962 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▊    | 972 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████    | 983 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▎   | 993 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▋   | 1.0 MB 7.8 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▉   | 1.0 MB 7.8 MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▏  | 1.0 MB 7.8 MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▌  | 1.0 MB 7.8 MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▊  | 1.0 MB 7.8 MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████  | 1.1 MB 7.8 MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▍ | 1.1 MB 7.8 MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▋ | 1.1 MB 7.8 MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████ | 1.1 MB 7.8 MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▏| 1.1 MB 7.8 MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▌| 1.1 MB 7.8 MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▉| 1.1 MB 7.8 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 1.1 MB 7.8 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 1.1 MB 5.1 MB/s \n",
             "\u001b[?25hRequirement already satisfied: typeguard>=2.7 in /usr/local/lib/python3.7/dist-packages (from tensorflow_addons) (2.7.1)\n",
             "Installing collected packages: tensorflow-addons\n",
             "Successfully installed tensorflow-addons-0.16.1\n"
@@ -49,7 +49,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "273e5c47",
-        "outputId": "e2ce0c3d-3da2-4e95-954a-e97b81074146"
+        "outputId": "cb6308e5-d1f5-4eb5-d92f-8aec358b4e27"
       },
       "outputs": [
         {
@@ -89,10 +89,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FTxP_p0fZrGX",
-        "outputId": "57d6b008-045d-4d88-db40-05b27acb03bd"
+        "outputId": "571418a2-8fa5-4139-b0f5-65c8c87676b0"
       },
       "id": "FTxP_p0fZrGX",
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -105,14 +105,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "id": "61f265cf",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "61f265cf",
-        "outputId": "a062532e-52aa-417a-e0cf-4da638b757cf"
+        "outputId": "9acacae2-b846-460d-8a76-2735264a662d"
       },
       "outputs": [
         {
@@ -157,7 +157,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 5,
       "id": "498b8dd1",
       "metadata": {
         "id": "498b8dd1"
@@ -205,7 +205,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "id": "0265e93d",
       "metadata": {
         "colab": {
@@ -355,7 +355,7 @@
         "id": "PVDAyYHHiwX8"
       },
       "id": "PVDAyYHHiwX8",
-      "execution_count": 9,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -371,23 +371,25 @@
         "id": "nrmij0NKjg0Z"
       },
       "id": "nrmij0NKjg0Z",
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# checkpoint_path = \"/content/drive/MyDrive/School/MIT Spring2022/9.60/Vision Project/Models//content/drive/MyDrive/School/MIT Spring2022/9.60/Vision Project/Models/Dualstream_with_ResNet2.0\"\n",
+        "model_save_loc = \"/content/drive/MyDrive/School/MIT Spring2022/9.60/Vision Project/Vision Dataset/Models/\"\n",
+        "model_name = \"Dualstream_with_ResNet_1000_Samples_Deeper_50Classes\"\n",
+        "checkpoint_path = f\"{model_save_loc}{model_name}\"\n",
         "callback = tf.keras.callbacks.EarlyStopping(monitor='val_accuracy', patience=20, restore_best_weights=True)\n",
-        "# cp_callback = tf.keras.callbacks.ModelCheckpoint(filepath=checkpoint_path,\n",
-        "#                                                  save_weights_only=True,\n",
-        "#                                                  verbose=1)\n",
+        "cp_callback = tf.keras.callbacks.ModelCheckpoint(filepath=checkpoint_path,\n",
+        "                                                 monitor='val_accuracy',\n",
+        "                                                 save_weights_only=True,\n",
+        "                                                 verbose=1)\n",
         "\n",
         "train_history = dual_stream_model.fit(train_ds_preprocessed, validation_data= val_ds_preprocessed,\n",
         "                                      epochs= 60, callbacks=callback, workers = 4)\n",
-        "model_save_loc = \"/content/drive/MyDrive/School/MIT Spring2022/9.60/Vision Project/Vision Dataset/Models/\"\n",
-        "model_name = \"Dualstream_with_ResNet_1000_Samples_Deeper_50Classes\"\n",
-        "dual_stream_model.save(f\"{model_save_loc}{model_name}\")\n",
+        "\n",
+        "# dual_stream_model.save()\n",
         "\n",
         "#Save training history to CSV\n",
         "hist_df = pd.DataFrame(train_history.history)\n",
@@ -457,16 +459,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "65c96552-8b71-4188-f5dc-278722fe3683"
+        "outputId": "69d9a888-8526-464e-cd72-f49c4308b783"
       },
       "id": "DgvAWYPbviCb",
-      "execution_count": 6,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "73/73 [==============================] - 42s 382ms/step - loss: 1.3577 - accuracy: 0.6549\n"
+            "376/376 [==============================] - 47s 120ms/step - loss: 2.4059 - accuracy: 0.3419\n"
           ]
         }
       ]
@@ -528,7 +530,7 @@
         "id": "6Q0i4qDtJ1mx"
       },
       "id": "6Q0i4qDtJ1mx",
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -554,7 +556,7 @@
         }
       },
       "id": "n82_rX4HgSEg",
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
